Added optimistic lock + more test coverage
