# src/main/java/com/parkinglotmanager/repository/models/PricingPolicyEntity.java
@@ -2,24 +2,31 @@ package com.parkinglotmanager.repository.models;
 
 import javax.persistence.Column;
 import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
 import javax.persistence.Table;
 import javax.persistence.UniqueConstraint;
 
 import lombok.AllArgsConstructor;
-import lombok.Builder;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
 import lombok.NoArgsConstructor;
+import lombok.experimental.SuperBuilder;
 
 @Entity
 @Table(name = "PRICING_POLICY", uniqueConstraints = {
 		@UniqueConstraint(columnNames = { "type", "basePrice", "fixedAmmount" }) })
 @Data
 @EqualsAndHashCode(callSuper = true)
-@Builder
+@SuperBuilder
 @AllArgsConstructor
 @NoArgsConstructor
 public class PricingPolicyEntity extends AbstractBaseEntity {
+
+	@Id
+	@GeneratedValue
+	@Column(nullable = false, insertable = false, updatable = false)
+	protected Integer id;
 
 	@Column
 	private String type;
@@ -29,8 +36,4 @@ public class PricingPolicyEntity extends AbstractBaseEntity {
 
 	@Column
 	private Float fixedAmmount;
-
-//	@Builder.Default
-//	@OneToMany(mappedBy = "pricingPolicy")
-//	private List<ParkingLotEntity> parkingLotEntities = new ArrayList<ParkingLotEntity>();
 }
